🩹 fix:overflow: scroll제거

--- a/src/components/management/managementContainer/styles/PackagingContainer.module.css
+++ b/src/components/management/managementContainer/styles/PackagingContainer.module.css
@@ -46,5 +46,4 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  overflow-y: scroll;
 }
